--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ p {
     font-size: 14px;
 }
 .contents {
+  margin-top: 50px;
     padding: 20px;
     width: 35%;
     background-color: hsl(0, 0%, 8%);
