--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 .attribution {
-    margin-top: 30px;
+    margin-top: 20px;
     font-size: 7px;
     text-align: center;
 }
@@ -11,7 +11,7 @@
 
 body,
 html {
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     margin: 0;
     padding: 0;
     height: 100%;
@@ -27,7 +27,7 @@ h1 {
     height: 5px;
 }
 p {
-  height: 5px;
+    height: 5px;
 }
 #address {
     color: hsl(75, 94%, 57%);
@@ -47,12 +47,12 @@ p {
     align-items: center;
 }
 .contents img {
-  height: 100px;
-  width: 100px;
-  border-radius: 50%;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
 }
 .links {
-  padding: 20px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     gap: 18px;
@@ -69,7 +69,7 @@ p {
     background-color: hsl(0, 0%, 20%);
 }
 .links a:hover {
-  background-color: #C4F72B;
-  transition: 0.3 ease;
-  cursor: pointer;
+    background-color: #c4f72b;
+    transition: 0.3 ease;
+    cursor: pointer;
 }
