--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
     padding: 0;
     height: 100%;
     width: 100%;
+    background-color: #141414;
     display: flex;
     flex-direction: column;
     align-items: center;
