--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin-top: 10px;
     font-size: 7px;
     text-align: center;
+    color: #fff;
 }
 .attribution a {
     color: hsl(228, 45%, 44%);
