--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html {
     padding: 0;
     height: 100%;
     width: 100%;
-    background-color: #141414;
+    background-color: black;
     display: flex;
     flex-direction: column;
     align-items: center;
