--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ p {
     margin-top: 50px;
     padding: 20px;
     padding-right: 60px;
+    padding-left: 40px;
     background-color: hsl(0, 0%, 8%);
     border-radius: 10px;
     display: flex;
